# egg-bench

./: README.md
benchmarks/bitvec/: README.md  bv8.smt2
benchmarks/group/: README.md  group.smt2
benchmarks/kleene/: README.md
tools/: kdrag_extract.py  pyproject.toml
