[project]
name = "eggbench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "egglog>=11.3.0",
    "knuckledragger",
    "z3-solver>=4.15.3.0",
]

[tool.uv.sources]
knuckledragger = { git = "https://github.com/philzook58/knuckledragger.git" }
